# AmazonRecommender

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
flask_app/: app.py
flask_app/src/: rec_engine.py
flask_app/static/css/: styles.css
flask_app/static/javascript/: index.js  user.js
flask_app/templates/: index.html
scripts/: algorithm.ipynb  clean_and_merge_data.ipynb  cleaning.ipynb  example_exploratory.ipynb  extract.py  import_tables.sql  preprocessing.ipynb  products_distributions.ipynb
scripts/.ipynb_checkpoints/: create_tables-checkpoint.sql
